# data-ming-and-learning-analysis

./: README.md  pyproject.toml
scripts/: kmeans-for-iris.py  kmeans-for-trirandom.py
scripts/Initialization/: data-integration.py  data-transformation.py  preprocess.py
