[project]
name = "educational-data-mining-and-learning-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.251219",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
